feat 네비바에 dm 추가하고, 테스트파일(chamjo.js)삭제 하였습니다

--- a/dm.html
+++ b/dm.html
@@ -24,18 +24,26 @@
 <body>
     <div class="wrapper">
         <!-- 유저가 보유한 채팅방(header) 리스트 -->
+        <div class="header">
+            <div class="header_list" id="header_list">
+                <div class="header" id="header">
+                    <div class="header_user_profile_img">
+                        <img id="user_profile_img"
+                            src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
+                    </div>
+                    <div class="header_user_profile">
+                        <div class="username" id="username">Username</div>
+                        <div class="content">
+                            <div class="last_message" id="last_message">
+                                녕</div>
+                            <div calss="time-before" style="margin-right: -20px; margin-top: 13px; font-size: 12px;">
+                                10분전
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-        <div class="header_list" id="header_list">
-            <!-- <div class="header" id="">
-                <div class="header_user_profile_img">
-                    <img id="user_profile_img"
-                        src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
-                </div>
-                <div class="header_user_profile">
-                    <div class="username" id="username">Username</div>
-                    <div class="last_message" id="last_message">안녕하세요~안녕하세요~</div>
-                </div>
-            </div> -->
+            </div>
         </div>
 
         <!-- 채팅방 이너  -->
@@ -43,18 +51,16 @@
             <div class="user_container">
                 <div class="user_box">
                     <div class="user_profile">
-                        <div class="user_img_box">
+                        <!-- <div class="user_img_box">
                             <img id="user_profile_img"
                                 src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
-                        </div>
+                        </div> -->
                     </div>
                     <div class="user_introduction">
                         <div id="introduction" class="introduction">
-                            Username
+                            <!-- Username -->
                         </div>
                     </div>
-                </div>
-                <div id="user_button_box" class="user_button_box">
                 </div>
             </div>
             <div id="show_container" class="show_container">
