--- a/dm.html
+++ b/dm.html
@@ -19,79 +19,87 @@
     <script src="https://use.fortawesome.com/99966411.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
 
 <body>
-    <div class="wrapper">
-        <!-- 유저가 보유한 채팅방(header) 리스트 -->
-        <div class="header">
-            <div class="header_list" id="header_list">
-                <div class="header" id="header">
-                    <div class="header_user_profile_img">
-                        <img id="user_profile_img"
-                            src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
-                    </div>
-                    <div class="header_user_profile">
-                        <div class="username" id="username">Username</div>
-                        <div class="content">
-                            <div class="last_message" id="last_message">
-                                녕</div>
-                            <div calss="time-before" style="margin-right: -20px; margin-top: 13px; font-size: 12px;">
-                                10분전
+    <nav id="bar-nav">
+        <script>$("#bar-nav").load("nav.html");</script>
+    </nav>
+
+    <section>
+        <div class="wrapper">
+            <!-- 유저가 보유한 채팅방(header) 리스트 -->
+            <div class="header">
+                <div class="header_list" id="header_list">
+                    <div class="header" id="header">
+                        <div class="header_user_profile_img">
+                            <img id="user_profile_img"
+                                src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
+                        </div>
+                        <div class="header_user_profile">
+                            <div class="username" id="username">Username</div>
+                            <div class="content">
+                                <div class="last_message" id="last_message">
+                                    녕</div>
+                                <div calss="time-before"
+                                    style="margin-right: -20px; margin-top: 13px; font-size: 12px;">
+                                    10분전
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
-
             </div>
-        </div>
 
-        <!-- 채팅방 이너  -->
-        <div class="main_container">
-            <div class="user_container">
-                <div class="user_box">
-                    <div class="user_profile">
-                        <!-- <div class="user_img_box">
+            <!-- 채팅방 이너  -->
+            <div class="main_container">
+                <div class="user_container">
+                    <div class="user_box">
+                        <div class="user_profile">
+                            <!-- <div class="user_img_box">
                             <img id="user_profile_img"
                                 src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
                         </div> -->
-                    </div>
-                    <div class="user_introduction">
-                        <div id="introduction" class="introduction">
-                            <!-- Username -->
+                        </div>
+                        <div class="user_introduction">
+                            <div id="introduction" class="introduction">
+                                <!-- Username -->
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="show_container" class="show_container">
-                <div id="show_box" class="show_box">
-                    <div id="chat_box_wrapper">
+                <div id="show_container" class="show_container">
+                    <div id="show_box" class="show_box">
+                        <div id="chat_box_wrapper">
 
-                        <div id="chat_box" class="chat_box" style="display:flex">
-                            <div id="messages" class="messages">
+                            <div id="chat_box" class="chat_box" style="display:flex">
+                                <div id="messages" class="messages">
 
+                                </div>
+                                <div id="messages" class="messages">
+
+                                </div>
                             </div>
-                            <div id="messages" class="messages">
-
+                            <div class="chat_input_box" id="input-message">
+                                <form id="form" class="sendbox">
+                                    <input class="sendbox_inner" type="text" name="message" placeholder="메세지 입력...">
+                                </form>
                             </div>
-                        </div>
-
-                        <div class="chat_input_box" id="input-message">
-                            <form id="form" class="sendbox">
-                                <input class="sendbox_inner" type="text" name="message" placeholder="메세지 입력...">
-                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    </div>
+    </section>
 
     <script src="./static/js/search.js"></script>
     <script src="./static/js/urls.js"></script>
     <script src="/static/js/dm.js"></script>
+    <!-- <script src="/static/js/kakao.js"></script> -->
+
 
 </body>
 
