--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <title>Main Page</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 </head>
 
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
@@ -113,9 +115,12 @@
         </div>
     </div>
     <div class="main_screen">
+        <nav id="bar-nav">
+            <script>$("#bar-nav").load("nav.html");</script>
+        </nav>
 
         <!-- 상단 메뉴바 -->
-        <nav class="navbar">
+        <!-- <nav class="navbar">
             <div class="logo">
                 Petrasche
             </div>
@@ -135,7 +140,6 @@
                 <div onclick="alarm(this)" id="alarm" class="alarm">
                     <i class="fa-solid fa-bell"></i>
                     <div class="history">
-
                     </div>
                 </div>
                 <div class="user">
@@ -143,7 +147,7 @@
                 </div>
                 <div onclick="Logout()" class="logout">로그아웃</div>
             </div>
-        </nav>
+        </nav> -->
         <!--  -->
 
         <div class="top_section">
@@ -186,10 +190,6 @@
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
         <script src="./static/js/kakao.js"></script>
         <script src="./static/js/search.js"></script>
-        <script src="./static/js/dm.js"></script>
-
-
-
 </body>
 
 </html>
