Add urls.py에 네비바 js 추가

--- a/nav.html
+++ b/nav.html
@@ -47,7 +47,7 @@
 
 </body>
 
-<script>
+<!-- <script>
 
     const DM = () => {
         window.location.href = "/dm.html";
@@ -104,6 +104,6 @@
             }
         };
     }
-</script>
+</script> -->
 
 </html>
