--- a/login.html
+++ b/login.html
@@ -45,5 +45,8 @@
     <script src="./static/js/urls.js"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>  
     <script src="./static/js/kakao.js"></script>
+    <script>
+
+    </script>
 </body>
 </html>
