크롬정상작동 엣지에서만 계속 오류 발생하네요

--- a/dm.html
+++ b/dm.html
@@ -20,6 +20,8 @@
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/static/js/dmapi.js"></script>
+
 
 </head>
 
@@ -33,23 +35,6 @@
             <!-- 유저가 보유한 채팅방(header) 리스트 -->
             <div class="header">
                 <div class="header_list" id="header_list">
-                    <div class="header" id="header">
-                        <div class="header_user_profile_img">
-                            <img id="user_profile_img"
-                                src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
-                        </div>
-                        <div class="header_user_profile">
-                            <div class="username" id="username">Username</div>
-                            <div class="content">
-                                <div class="last_message" id="last_message">
-                                    녕</div>
-                                <div calss="time-before"
-                                    style="margin-right: -20px; margin-top: 13px; font-size: 12px;">
-                                    10분전
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                 </div>
             </div>
@@ -98,9 +83,6 @@
     <script src="./static/js/search.js"></script>
     <script src="./static/js/urls.js"></script>
     <script src="/static/js/dm.js"></script>
-    <!-- <script src="/static/js/kakao.js"></script> -->
-
-
 </body>
 
 </html>
