--- a/tournament.html
+++ b/tournament.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="/static/css/main_style.css">
     <link rel="stylesheet" href="/static/css/hashtag.css">
     <link rel="stylesheet" href="/static/css/tournament.css">
+    <!-- <link rel="stylesheet" href="/static/css/nav.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+    
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <title>tournament</title>
 </head>
