--- a/walk.html
+++ b/walk.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/static/css/main_style.css">
     <link rel="stylesheet" href="/static/css/neighbor.css">
     <link rel="stylesheet" href="/static/css/hashtag.css">
+    <link rel="stylesheet" href="/static/css/nav.css">
+
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/34.2.0/classic/ckeditor.js"></script>
     <!-----텍스트에디터 ckeditor------>
