--- a/연습장.html
+++ b/연습장.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>주소로 장소 표시하기</title>
+    <script charset="utf-8" src="//cdn.iframe.ly/embed.js?api_key=b80ccdef3e18b5806449ef"></script>
     
 </head>
 <body>
@@ -16,8 +17,25 @@
 <div style="width:500px; height:500px;background-color: black;">
     <div id="map" style="width:500px;height:350px;"></div>
 </div>
+<!-- <oembed url="https://www.youtube.com/watch?v=BG5CW8rXnzQ"></oembed>
+
+<div style="position: relative; padding-bottom: 100%; height: 0; padding-bottom: 56.2493%;">
+    <iframe src="https://youtu.be/CZ01qB0EHZ8"
+        style="position: absolute; width: 100%; height: 100%; top: 0; left: 0;"
+        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+    </iframe>
+</div>
+-->
 
 
+
+<figure class="media"><oembed url="https://www.youtube.com/watch?v=BG5CW8rXnzQ"></oembed></figure>
+아아아아앙
+<!-- <figure class="media">
+    <div data-oembed-url="https://www.youtube.com/watch?v=BG5CW8rXnzQ">
+        <iframe src="https://www.youtube.com/watch?v=BG5CW8rXnzQ"></iframe>
+    </div>
+</figure> -->
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b1ae05cf3f44682ccf7ffba8606235b3&libraries=services"></script>
 <script>
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
@@ -56,6 +74,11 @@ geocoder.addressSearch('제주특별자치도 제주시 첨단로 242', function
         map.setCenter(coords);
     } 
 });    
+</script>
+<script>
+    document.querySelectorAll( 'oembed[url]' ).forEach( element => {
+        iframely.load( element, element.attributes.url.value );
+    } );
 </script>
 </body>
 </html>
