feat 텍스트 에디터에서 이미지 업로드 및 마이페이지 위치 정보 불러오기 기능

--- a/mypage.html
+++ b/mypage.html
@@ -54,7 +54,8 @@
                             </div>
                             <div class="username_box">
                                 <span class="username" id="username">
-                                </span>
+                                </span>	&nbsp;	&nbsp;
+                                <button id="submitLoc" id="submitLoc()" >내 위치 저장</button>
                             </div>
                         </div>
                         <div class="user_introduction">
