feat: 프로필 이미지 변경 모달 활성화

--- a/mypage.html
+++ b/mypage.html
@@ -48,7 +48,7 @@
                 <div class="user_container">
                     <div class="user_box">
                         <div class="main_user_profile">
-                            <div class="user_img_box">
+                            <div class="user_img_box" onclick="showPiChange()">
                                 <img id="user_profile_img"
                                     src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
                             </div>
