--- a/mypage.html
+++ b/mypage.html
@@ -105,12 +105,15 @@
     <div id="update_pi_modal_box" class="update_pi_modal_box">
         <div id="update_pi_modal_content" class="update_pi_modal_content">
             <input type="file" multiple accept="image/*" id="upload_pi_file">
-            <button onclick="" class="upload_pi_modal_btn" id="upload_pi_modal_btn">
+            <button onclick="" type="button" class="upload_pi_modal_btn" id="upload_pi_modal_btn">
                 <i class="fa-solid fa-camera"></i>
             </button>
             <img id="preview_profile_img" class="preview_profile_img"
                 src=""
                 alt="" srcset="">
+            <button type="button" id="change_pi_button">
+                저장
+            </button>
         </div>
     </div>
 
@@ -258,8 +261,8 @@
 
     <!------JS---------->
     <script src="./static/js/urls.js"></script>
-    <script src="./static/js/api.js"></script>
     <script src="./static/js/hashtag.js"></script>
+    <script src="./static/js/api.js"></script>
     <script src="./static/js/mypage.js"></script>
     <script src="./static/js/search.js"></script>
 </body>
