--- a/nav.html
+++ b/nav.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <title>Document</title>
+    <!-- <script src="./static/js/nav.js"></script> -->
 </head>
 
 <body>
@@ -42,7 +43,6 @@
             </div>
         </nav>
     </div>
-
 </body>
 
 </html>
