--- a/nav.html
+++ b/nav.html
@@ -17,6 +17,7 @@
     <div class="wrap-nav">
         <nav class="navbar">
             <div class="logo" onclick="home()">
+                <img style="width:40px;" src='https://velog.velcdn.com/images/tasha_han_1234/post/59e0d749-79a1-43ca-835a-a5f3181a49df/image.png'>
                 Petrasche
             </div>
             <div class="serch">
