--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
-    <title>Petrasche | Main</title>
+    <title>Petrasche테스트 | Main</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
