fix 큰 이미지 넣었을때 산책 디테일 게시물 깨지는거 일부만 수정...

--- a/walk.html
+++ b/walk.html
@@ -215,8 +215,8 @@
                 <div style="width:100%; min-height: 500px;">
                     
                     <div class="main_column"style="display:flex; float:left;width:65%; height:120%;border-radius: 8px; background-color:white;padding:30px; overflow:auto">
-                        
-                        <div style="width:100%; margin:20px; height:100%; ">
+
+                        <div class="main_column_inner">
                             <div style="display:flex;justify-content: space-between;"><div style="display:flex"><img id="detail_profile" style="border-radius: 71%;height:30px; width:30px"></img><h2 id="host_name">00 산책장</h2></div><button id="go_back" onclick=goBack() style="background-color:black; color:white; border:none; padding: 0 10px;border-radius:10px">뒤로가기</button></div>
                             <div style="width:400px; height:100px; background-color:white; margin:30px auto;display: flex; justify-content: space-between;">
                                 <span></span>
