--- a/mypage.html
+++ b/mypage.html
@@ -54,8 +54,8 @@
                             </div>
                             <div class="username_box">
                                 <span class="username" id="username">
-                                </span>	&nbsp;	&nbsp;
-                                <button id="submitLoc" id="submitLoc()" >내 위치 저장</button>
+                                </span> &nbsp; &nbsp;
+                                <button id="submitLoc" id="submitLoc()" onclick="postHeader(id)">내 위치 저장</button>
                             </div>
                         </div>
                         <div class="user_introduction">
