--- a/mypage.html
+++ b/mypage.html
@@ -50,7 +50,7 @@
                         <div class="main_user_profile">
                             <div class="user_img_box" onclick="showPiChange()">
                                 <img id="user_profile_img"
-                                    src="https://photo.jtbc.joins.com/news/jam_photo/202109/24/1cafd5d0-6a05-4c52-a0fb-e4079839650c.jpg">
+                                    src="">
                             </div>
                             <div class="username_box">
                                 <span class="username" id="username">
@@ -60,7 +60,6 @@
                         </div>
                         <div class="user_introduction">
                             <div id="introduction" class="introduction">
-                                안녕하세요 김고은입니다.
                             </div>
                         </div>
                     </div>
