--- a/walk.html
+++ b/walk.html
@@ -163,7 +163,7 @@
                     </tr>
                 </table>
             </div>
-            <div class="pagination">
+            <div id="pagination" class="pagination">
                 <button class="btn" id="left_page">
                     <svg xmlns="http://www.w3.org/2000/svg" class="btn--icon" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
@@ -171,21 +171,14 @@
                     </svg>
                 </button>
                 <div id='pages' class="pages">
-                    <!-- <a class="page">1</a>
-                        <a class="page">2</a> -->
-                    <!-- <a class="page active">3</a> -->
-                    <!-- <a class="page">4</a>
-                        <a class="page">5</a>
-                        <a class="page">6</a> -->
-
-                    </div>
-                    <button class="btn" id="right_page">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="btn--icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                            stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-                        </svg>
-                    </button>
                 </div>
+                <button class="btn" id="right_page">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="btn--icon" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+                    </svg>
+                </button>
+            </div>
 
 
             </div> 
