fix-네브바 회원비회원 구분 fix walk페이지 페이지네이션 오류 수정 fix walk페이지 왼쪽 쏠림 현상 수정

--- a/walk.html
+++ b/walk.html
@@ -67,7 +67,7 @@
 
 
     <div class="top_section">
-        <div class="left_menu" style="height:400px">
+        <div class="left_menu" style="height:400px;margin-right:170px">
             <div class="menu_dog">
                 <img src="https://cdn-icons-png.flaticon.com/512/2754/2754652.png" alt="">
                 댕댕이
@@ -221,12 +221,7 @@
                     </div>
                     
                 </div>
-                <button class="btn" id="right_page">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="btn--icon" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-                    </svg>
-                </button>
+
             </div>
 
 
