--- a/nav.html
+++ b/nav.html
@@ -30,7 +30,7 @@
                         alt="">
                 </div>
                 <div onclick="UserPage()" id="user_profile" class="user_profile">
-                    <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt="">
+                    <img id='user_img' src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt="">
                 </div>
                 <div onclick="alarm(this)" id="alarm" class="alarm">
                     <i class="fa-solid fa-bell"></i>
@@ -40,7 +40,7 @@
                 <div class="user">
                     <span class="user_name" id="user">유저님</span>
                 </div>
-                <div onclick="Logout()" class="logout">로그아웃</div>
+                <div id='loginout' onclick="Logout()" class="logout">로그아웃</div>
             </div>
         </nav>
     </div>
