--- a/walk.html
+++ b/walk.html
@@ -396,6 +396,7 @@
             </div>
         </div>
         <!-------------------------------->
+        <!-- console.log("*******") -->
     </div>
     <script>
         const mapClose = () =>{
