fix: 소개글 변경 버튼 수정

--- a/mypage.html
+++ b/mypage.html
@@ -62,8 +62,9 @@
                         <div class="user_introduction" id="user_introduction">
                             <div id="introduction" class="introduction">
                             </div>
-                            <input id="change_intro_input" type="textarea" value="" />
-                            <button id="change_intro_button" type="button" onclick="changeIntoriduction()">저장</button>
+                            <textarea id="change_intro_input" type="textarea" value="" ></textarea>
+                            <!-- <input id="change_intro_input" type="textarea" value="" /> -->
+                            <!-- <button id="change_intro_button" type="button" onclick="changeIntoriduction()">저장</button> -->
                         </div>
                     </div>
                     <div id="user_button_box" class="user_button_box">
