네비바 수정

--- a/nav.html
+++ b/nav.html
@@ -46,6 +46,45 @@
             </div>
         </nav>
     </div>
+    <script>
+                // 로그인 했을때만 해당 유저 인포 가져온다
+
+        const GetUserInfo = () => {
+            // payload = localStorage.getItem("payload")
+            // console.log(JSON.parse(payload))
+            if (localStorage.getItem("payload") != null) {
+                fetch(`${backend_base_url}user/`, {
+                    method: "GET",
+                    headers: {
+                        Accept: "application/json",
+                        "Content-type": "application/json",
+                        Authorization: "Bearer " + localStorage.getItem("user_access_token"),
+                    },
+                })
+                    .then((res) => res.json())
+                    .then((res) => {
+                        if (res.username == null) {
+
+                        } else {
+                            document.getElementById("user").innerHTML = res.username;
+                            console.log(res.profile_img)
+                            document.getElementById('user_img').src = res.profile_img
+                        }
+                    });
+
+
+            }
+            else {
+                console.log("***")
+                let user_profile = document.getElementById('user_profile')
+                user_profile.style.display = 'none';
+                document.getElementById('loginout').innerHTML = '로그인';
+            }
+        };
+        GetUserInfo()
+
+
+    </script>
 </body>
 
 </html>
