--- a/nav.html
+++ b/nav.html
@@ -10,14 +10,15 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
     <title>Document</title>
-    <!-- <script src="./static/js/nav.js"></script> -->
+    <!-- <script src="./static/js/urls.js"></script> -->
 </head>
 
 <body>
     <div class="wrap-nav">
         <nav class="navbar">
             <div class="logo" onclick="home()">
-                <img style="width:40px;" src='https://velog.velcdn.com/images/tasha_han_1234/post/59e0d749-79a1-43ca-835a-a5f3181a49df/image.png'>
+                <img style="width:40px;"
+                    src='https://velog.velcdn.com/images/tasha_han_1234/post/59e0d749-79a1-43ca-835a-a5f3181a49df/image.png'>
                 Petrasche
             </div>
             <div class="serch">
@@ -26,11 +27,13 @@
             </div>
             <div class="user_info">
                 <div onclick="DM()" id="dm" class="dm">
-                    <img id ='n_profile_pic' src="https://image.shutterstock.com/z/stock-vector-animal-dog-paw-print-isolated-silhouette-vector-illustration-1499728328.jpg"
+                    <img id='n_profile_pic'
+                        src="https://image.shutterstock.com/z/stock-vector-animal-dog-paw-print-isolated-silhouette-vector-illustration-1499728328.jpg"
                         alt="">
                 </div>
                 <div onclick="UserPage()" id="user_profile" class="user_profile">
-                    <img id='user_img' src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt="">
+                    <img id='user_img'
+                        src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cocker-spaniel-2785074__480.jpg" alt="">
                 </div>
                 <div onclick="alarm(this)" id="alarm" class="alarm">
                     <i class="fa-solid fa-bell"></i>
