--- a/walk.html
+++ b/walk.html
@@ -230,68 +230,7 @@
 
             </div>
         </div>
-    </div>
-
-
-    <!--  detail 페이지 본문 -->
-    <div id="detail_r_sec" class="right_section" style="width:70%;margin-left: 50px;padding:20px;display:none">
-
-        <div style="width:100%; min-height: 500px;">
-
-            <div class="main_column"
-                style="display:flex; float:left;width:65%; height:120%;border-radius: 8px; background-color:white;padding:30px; overflow:auto">
-
-                <div style="width:100%; margin:20px; height:100%; ">
-                    <div style="display:flex;justify-content: space-between;">
-                        <div style="display:flex"><img id="detail_profile"
-                                style="border-radius: 71%;height:30px; width:30px"></img>
-                            <h2 id="host_name">00 산책장</h2>
-                        </div>
-                        <button class="dm_btn" id="dm_btn" onclick=postHeader()
-                            style="background-color:black; color:white; border:none; margin-right: -40%;; padding: 0 10px;border-radius:10px">문의하기</button>
-                        <button id="go_back" onclick=goBack()
-                            style="background-color:black; color:white; border:none; padding: 0 10px;border-radius:10px">뒤로가기</button>
-                    </div>
-
-                    <div
-                        style="width:400px; height:100px; background-color:white; margin:30px auto;display: flex; justify-content: space-between;">
-                        <span></span>
-                        <h1 id="timer" style="margin:auto 0;">05:30:33</h1>
-                        <span></span>
-
-                    </div>
-                    <hr>
-                    <div style="width:100%; height:30px"></div>
-                    <div id='detail_detail' style="width:90%; height:500px;margin:0 auto;">
-
-                        <!-- <img id='w_d_img_box'style="width:300px; height:300px; background-color: grey;border-radius: 5px;margin: 20px auto;display:block; margin:10px auto;over-fit:cover"/> -->
-
-                        <div id="detail_contents" style="text-align: center;">우리 뿌숑이랑 같이 산책 갈 사람 구함여~<br>우리 이쁘고 착한
-                            뿌숑이는 짖지도않고 사람을 좋아해요~~ 단 한번도 물지 않은 뿌숑이랑 같이 산책 나가실 분 구합니다!<br>사람을 좋아하긴하는데 다른 강아지들은 조금
-                            무서워해요..ㅜㅜ 착한 친구 강아지 구합니다!</div>
-                    </div>
-
-                </div>
-            </div>
-            <div class="right_column"
-                style="display:flex; float:right; width:30%; height:400px; background-color:white;margin:20px;display:flex; border-radius:8px;position:relative;padding:20px">
-                <div style="width:100%; height:300px; margin-bottom:20px; margin-left: 20px;font-weight:600">
-                    <br>
-                    <p style="display: block;">날짜: <span id="detail_date">7/23</span></p><br>
-                    <p>위치: <span id="detail_place">장지동</span>&nbsp;<button id='showmap'
-                            style="background-color:black; color:white;padding:3px;border-radius:5px">지도 보기</button>
-                    </p><br>
-                    <p>성별: <span id="detail_gender">남,여</span></p><br>
-                    <p>인원: <span id="detail_number">4명</span></p><br>
-                    <p>사이즈: 대형견만</p>
-                </div>
-                <button class="attend_walk" id="attend_walk"
-                    style="width:85%; height:100px; background-color:pink; border-radius: 8px;text-align: center; position:absolute; bottom: 20px;">
-                    산책가기 <br> <span id="left_seat"></span>자리 남았습니다</button>
-            </div>
-
-        </div>
-    </div>
+    <!-- </div> -->
 
 
 
