문의 버튼 수정

--- a/walk.html
+++ b/walk.html
@@ -70,7 +70,7 @@
 
     <div class="top_section">
         <div class="left_menu" style="height:270px;margin-right:170px">
-            <div  class="menu_dog">
+            <div class="menu_dog">
                 <img src="https://cdn-icons-png.flaticon.com/512/452/452823.png" alt="">
                 홈으로
             </div>
@@ -189,7 +189,10 @@
                             <div style="display:flex"><img id="detail_profile"
                                     style="border-radius: 71%;height:30px; width:30px"></img>
                                 <h2 id="host_name">00 산책장</h2>
-                            </div><button id="go_back" onclick=goBack()
+                            </div>
+                            <button class="dm_btn" id="dm_btn" onclick=postHeader()
+                                style="background-color:black; color:white; border:none; margin-right: -40%;; padding: 0 10px;border-radius:10px">문의하기</button>
+                            <button id="go_back" onclick=goBack()
                                 style="background-color:black; color:white; border:none; padding: 0 10px;border-radius:10px">뒤로가기</button>
                         </div>
                         <div
