--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
             
             <div class="right_section">
-                <h1 class="top_title">Best 게시물</h1>
+                <h1 class="top_title">인기 게시물</h1>
                 <div id="top_article" class="top_article">
                 </div>
                 <div class="scroll_button">
@@ -156,9 +156,9 @@
                 </div>
             </div>
         </div>
+        <script src="./static/js/urls.js"></script>
         <script src="/static/js/refresh.js"></script>
         <script src="/static/js/hashtag.js"></script>
-        <script src="./static/js/urls.js"></script>
         <script src="/static/js/main_api.js"></script>
         <script src="/static/js/main_script.js"></script>
         <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
