--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
     <div id="now_loading" class="load_img">
-        <img src="https://i.pinimg.com/originals/b5/9e/c4/b59ec4cdd3e542541ec5c5234b92a9b6.gif" alt="" srcset="">
+        <img src="/static/load_img/article_load.gif" alt="" srcset="">
     </div>
     <div id="now_loading_page" class="load_img">
         <img src="https://media4.giphy.com/media/nMoMxQG2uJsGTBsjsO/giphy.gif?cid=6c09b9522kmc1si0rh34bk2aps7wu7lwtgy3ie6iwe7pyxxt&rid=giphy.gif&ct=s"
