fix; 지도 글자 안 보이는 오류 수정

--- a/walk.html
+++ b/walk.html
@@ -60,7 +60,7 @@
     </nav>
     <!--  -->
     <div id="map_modal"
-        style="background-color:black;color:white;display: none;padding:10px;left:30%;width:500px;height:510px;z-index:10000;position:absolute;padding:auto">
+        style="background-color:black;color:black;display: none;padding:10px;left:30%;width:500px;height:510px;z-index:10000;position:absolute;padding:auto">
 
         <div onclick="mapClose()">x</div>
         <div id="map" style="height:460px; width: 460px;margin: auto;"></div>
