--- a/walk.html
+++ b/walk.html
@@ -18,8 +18,8 @@
     <script charset="utf-8" src="//cdn.iframe.ly/embed.js?api_key=b80ccdef3e18b5806449ef"></script>
     <script src="https://ckeditor.com/apps/ckfinder/3.5.0/ckfinder.js"></script>
     <!-----텍스트에디터 ckeditor------>
-
-    <title>Main Page</title>
+    <link rel="shortcut icon" type="image/x-icon" href="static\petrasche_배경좁게.ico" />
+    <title> Walk | Petrasche</title>
     <style>
         .ck-editor__editable {
             min-height: 500px;
