--- a/dm.html
+++ b/dm.html
@@ -10,6 +10,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="shortcut icon" type="image/x-icon" href="static\petrasche_배경좁게.ico" />
     <title>DirectMessage</title>
     <link rel="stylesheet" type="text/css" href="./static/css/login.css">
     <link rel="stylesheet" type="text/css" href="./static/css/dm.css">
