--- a/tournament.html
+++ b/tournament.html
@@ -12,7 +12,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     
     <script src="https://kit.fontawesome.com/0e01622099.js" crossorigin="anonymous"></script>
-    <title>tournament</title>
+    <link rel="shortcut icon" type="image/x-icon" href="static\petrasche_배경좁게.ico" />
+    <title>tournament | Petrasche</title>
 </head>
 
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
