fix 메인페이지 반응형 레이아웃

--- a/nav.html
+++ b/nav.html
@@ -47,7 +47,18 @@
                 <div id='loginout' onclick="Logout()" class="logout">로그아웃</div>
 
             </div>
+
+            <div>
+                <div class="serchs">
+                    <input name="search" id="words_for_search" type="text" placeholder="Petrasche">
+                    <button class="serch_button" type="button" onclick="search()">검색</button>
+                </div>
+            </div>
+            
         </nav>
+
+        
+
     </div>
     <script>
                 // 로그인 했을때만 해당 유저 인포 가져온다
