fix 검색 부분 수정

--- a/nav.html
+++ b/nav.html
@@ -23,7 +23,7 @@
             </div>
             <div class="serch">
                 <input name="search" id="words_for_search" type="text" placeholder="Petrasche">
-                <button class="serch_button" type="button" onclick="search()">검색</button>
+                <button class="serch_button" type="button" onclick="search(this)">검색</button>
             </div>
             <div class="user_info">
                 <div onclick="DM()" id="dm" class="dm">
@@ -51,7 +51,7 @@
             <div>
                 <div class="serchs">
                     <input name="search" id="words_for_search" type="text" placeholder="Petrasche">
-                    <button class="serch_button" type="button" onclick="search()">검색</button>
+                    <button class="serch_button" type="button" onclick="search(this)">검색</button>
                 </div>
             </div>
             
