--- a/walk.html
+++ b/walk.html
@@ -215,8 +215,8 @@
                     </div>
                 </div>
                 <div class="right_column"
-                    style="display:flex; float:right; width:30%; height:400px; background-color:white;margin:20px;display:flex; border-radius:8px;position:relative;padding:20px">
-                    <div style="width:100%; height:300px; margin-bottom:20px; margin-left: 20px;font-weight:600">
+                    style="display:flex; float:right; width:30%; min-height:400px; background-color:white;margin:20px;display:flex; border-radius:8px;position:relative;padding:20px">
+                    <div style="width:100%; margin-bottom:100px; margin-left: 20px;font-weight:600">
                         <br>
                         <p style="display: block;">날짜: <span id="detail_date">7/23</span></p><br>
                         <p>위치: <span id="detail_place">장지동</span>&nbsp;<button id='showmap'
@@ -226,6 +226,7 @@
                         <p>인원: <span id="detail_number">4명</span></p><br>
                         <p>사이즈: 대형견만</p>
                     </div>
+                    
                     <button class="attend_walk" id="attend_walk"
                         style="width:85%; height:100px; background-color:pink; border-radius: 8px;text-align: center; position:absolute; bottom: 20px;">
                         산책가기 <br> <span id="left_seat"></span>자리 남았습니다</button>
