--- a/walk.html
+++ b/walk.html
@@ -27,6 +27,9 @@
         button{
             cursor: pointer;
         }
+        td{
+            cursor: pointer;
+        }
     </style>
 </head>
 
