--- a/dm.html
+++ b/dm.html
@@ -61,7 +61,7 @@
 
                             <div id="chat_box" class="chat_box" style="display:flex">
                                 <div id="messages" class="messages">
-
+                                    asd
                                 </div>
                                 <div id="messages" class="messages">
 
